# cohere-embed-mock

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  sample.http
.github/workflows/: ci.yaml  pr.yaml
src/: embed.rs  errors.rs  health.rs  main.rs
