[package]
name = "cohere-embed-mock"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Poisson <jonathanpoisson@outlook.com>"]
readme = "README.md"

[[bin]]
name = "cohere-embed-mock"
path = "src/main.rs" 

[dependencies]
actix-web = { version = "4.9.0", features = ["default", "actix-tls"], default-features = false }
actix-cors = { version = "0.7.0", default-features = false }
dotenvy = {version = "0.15.7", default-features = false}
tracing = { version = "0.1.41", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "ansi", "env-filter"], default-features = false }
hf-hub = { version = "0.4.1", features = ["rustls-tls", "tokio", "ureq"],  default-features = false  }
candle-core = { version = "0.8.3", features = [], default-features = false }
candle-transformers = { version = "0.8.3", features = [], default-features = false }
candle-nn = { version = "0.8.3", features = [], default-features = false }
tokenizers= { version = "0.21.0", features = ["onig", "progressbar", "esaxx_fast"], default-features = false }
serde = { version = "1.0.217", features = ["std", "derive"], default-features = false }
serde_json = { version = "1.0.138", features = ["std"], default-features = false }
chrono = { version = "0.4.39", features = ["clock", "serde"], default-features = false }
uuid = {version = "1.13.2", features = ["v4"], default-features = false}

[lints.clippy]
enum_glob_use = "deny"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
